--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'DM Sans';
     text-align: center;
     margin: 0 auto;
-    height: 6000px;
+    height: 5500px;
 }
 
 .menu-mobile {
@@ -146,7 +146,7 @@ i {
 }
 
 .fundo-serviços {
-    height: 2034px;
+    height: 1900px;
     width: 375px;
     padding-top: 100px;
 }
@@ -180,23 +180,59 @@ i {
 
 .sobre {
     background: #FFFAF1;
-    height: 970px;
+    height: 770px;
     text-align: left;
+    padding: 100px 24px;
 }
 
 .sobre p {
     color: #00856F;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 16px;
+    margin: 0;
 }
 
-.sobre h4 {
+.h4 {
     font-size: 30px;
     font-weight: bold;
+    margin-top: 16px;
+    margin-bottom: 24px;
 }
 
-.sobre p {
+.padraoP {
     color: #495057;
     font-size: 16px;
+}
+
+.sobre img {
+    position: absolute;
+    top: 3960px;
+    right: 26px;
+    height: 282px;
+}
+
+.contato {
+    text-align: left;
+    background: white;
+    height: 535px;
+    text-align: left;
+    padding: 100px 24px;
+}
+
+.wpp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #00856F;
+    border-radius: 40px;
+    border: none;
+    color: white;
+    width: 264px;
+    height: 52px;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-left: 24px;
+    cursor: pointer;
+
 }
