--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0 auto;
 }
 
-.menu-mobile {
+.menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -108,7 +108,7 @@ header:before {
     flex-direction: column;
 }
 
-button {
+.first-wpp {
     display: flex;
     justify-content: center;
     align-items: center;
