--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@import './styles/menu-nav.css';
+@import './styles/header.css';
+@import './styles/buttons.css';
+@import './styles/numbers.css';
+@import './styles/services.css';
+@import './styles/sobre.css';
+@import './styles/contato.css';
+@import './styles/footer.css';
+@import './styles/active-menu.css';
+@import './styles/backToTop.css';
+
 * {
     padding: 0;
     margin: 0;
@@ -9,447 +20,6 @@ body {
     margin: 0 auto;
 }
 
-.menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:  19px 24px;
-    box-sizing: border-box;
-}
-
-nav {
-    background: #DCE9E2;
-    width: 375px;
-    height: 72px;
-    position: fixed;
-    z-index: 1;
-    transition: background 0.5s;
-}
-
-nav.active {
-    background: #00856F;
-    transition: background 0.5s;
-}
-
-nav a {
-    text-decoration: none;
-    color: #000000;
-    transition: color 0.5s;
-}
-
-nav a h2 {
-    font-weight: 400;
-}
-
-nav a h2 strong {
-    color: #00856F;
-    transition: color 0.5s;
-}
-
-nav path {
-    stroke: #00856F;
-    transition: stroke 0.5s;
-}
-
-nav.active path {
-    stroke: #DCE9E2;
-    transition: stroke 0.5s;
-}
-
-nav.active a h2 strong, nav.active a {
-    color: white;
-    transition: color 0.5s;
-}
-
-nav button {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
 ul {
     list-style: none;
 }
-
-header {
-    width: 375px;
-    margin: auto auto;
-    position: relative;
-    padding-top: 72px;
-}
-
-header a {
-    text-decoration: none;
-}
-
-header:before {
-    content: "";
-    width: 100vw;
-    height: 1000px;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-color: #DCE9E2;
-}
-
-.intro h4 {
-    color: #00856F;
-    margin-top: 38px;
-    padding-top: 5px;
-}
-
-.intro h1 {
-    color: #212529;
-    font-weight: bold;
-    width: 325px;
-    height: 132px;
-    margin: -4px;
-    letter-spacing: 1px;
-    line-height: 43px;
-}
-
-.intro p {
-    color: #495057;
-    font-weight: 400;
-    width: 327px;
-    height: 108px;
-    line-height: 27px;
-    font-size: 18px;
-    padding-top: 8px;
-}
-
-.intro {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.first-wpp {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #00856F;
-    border-radius: 40px;
-    border: none;
-    color: white;
-    width: 263px;
-    height: 52px;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin: 13px auto;
-    cursor: pointer;
-}
-
-i {
-    padding-right: 8px;
-    font-size: 20px;
-}
-
-.numeros {
-    background: #FFFAF1;
-    width: 328px;
-    height: 450px;
-    padding-top: 13px;
-}
-
-.numeros h3 {
-    font-size: 48px;
-}
-
-.numeros .first h3 {
-    margin: 29px 0 2px 0;
-}
-
-.numeros .second h3 {
-    margin: 61px 0 2px 0;
-}
-
-.numeros .third h3 {
-    margin: 61px 0 2px 0;
-}
-
-.numeros p {
-    font-size: 16px;
-    color: #00856F;
-    font-weight: 400;
-    height: 24px;
-    padding: 0;
-    margin-top: 0;
-    z-index: 1;
-}
-
-.mina {
-    object-position: 0 24px;
-    top: 485px;
-}
-
-.serv {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 375px;
-}
-
-.serv p {
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #00856F;
-}
-
-.serv h2 {
-    width: 314px;
-    height: 117px;
-    font-size: 30px;
-    margin: 0 auto;
-}
-
-.serviços {
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.fundo-serviços {
-    width: 375px;
-    padding-top: 94px;
-}
-
-.hj {
-    background-color: white;   
-    border: 1px solid #DCE9E2;
-    box-sizing: border-box;
-    border-radius: 6px;
-    width: 328px;
-    height: 207px;
-    margin-left: 24px;
-    margin-top: 60px;
-    margin-bottom: 32px;
-    text-align: left;
-    padding: 22px 16px 18px 24px;
-}
-
-.hj h4 {
-    font-size: 24px;
-    line-height: 31px;
-    margin: 0 auto;
-    padding-bottom: 16px;
-    padding-top: 16px;
-}
-
-.hj p {
-    font-size: 16px;
-    margin: 0 auto;
-    line-height: 24px;
-}
-
-.hj.first {
-    margin-top: 60px;
-}
-
-.hj.second {
-    margin-top: 0px;
-}
-
-.hj.third {
-    margin-top: 0px;
-}
-
-.hj.fourth {
-    margin-top: 0px;
-}
-
-.hj.fiv {
-    margin-top: 0px;
-}
-
-.hj.six {
-    margin-top: 0px;
-}
-
-.sobre-nos {
-    padding-top: 72px;
-}
-
-.sobre {
-    background: #FFFAF1;
-    height: 770px;
-    text-align: left;
-    padding: 100px 24px;
-}
-
-.sobre p {
-    color: #00856F;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 16px;
-    margin: 0;
-}
-
-.h4 {
-    font-size: 30px;
-    font-weight: bold;
-    margin-top: 16px;
-    margin-bottom: 24px;
-}
-
-.padraoP {
-    color: #495057;
-    font-size: 16px;
-    line-height: 24px;
-}
-
-.sobre img {
-    padding-top: 60px ;
-}
-
-.contato {
-    text-align: left;
-    background: white;
-    height: 535px;
-    text-align: left;
-    padding: 83px 24px 116px 24px;
-}
-
-.wpp {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #00856F;
-    border-radius: 40px;
-    border: none;
-    color: white;
-    width: 267px;
-    height: 56px;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin: 32px 0px 60px 0px;
-    cursor: pointer;
-
-}
-
-.wpp i {
-    padding-right: 20px;
-}
-
-.contato div {
-    display: flex;
-}
-
-.contato div img {
-    margin-right: 8px;
-    align-self: flex-end;
-}
-
-.contato div p {
-    margin-bottom: 0px;
-}
-
-.contato h4 {
-    margin-bottom: 16px;
-}
-
-.contato img {
-    padding-left: 3px;
-}
-
-.contato a {
-    text-decoration: none;
-}
-
-footer {
-    background-color: #00856F;
-    padding: 60px 0px 100px 23px;
-    text-align: left;
-    color: white;
-    max-height: 285px;
-    height: 100%;
-}
-
-footer h2 {
-    font-size: 44px;
-    font-weight: 400;
-    margin-top: -14px;
-    margin-bottom: -6px;
-}
-
-footer p {
-    margin-bottom: -4px;
-}
-
-footer img {
-    margin-bottom: -44px;
-}
-
-
-/* ====== Menu Active ======= */
-
-body.menu-active .menu-mobile {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #00856F;
-    width: 100vw;
-    height: 100vh;
-}
-
-body.menu-inactive .close-menu {
-    display: none;
-}
-
-body.menu-active .open-menu {
-    display: none;
-}
-
-.social-links {
-    display: flex;
-    gap: 32px;
-    align-items: center;
-    justify-content: center;
-}
-
-.menu-mobile .button {
-    background: #FFFFFF;
-    border-radius: 40px;
-    color: #00856F;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 274px;
-    height: 55px;
-    margin: 48px auto 80px auto;
-    text-decoration: none;
-}
-
-.menu-mobile ul li a {
-    display: flex;
-    flex-direction: column;
-    gap: 48px;
-    margin-top: 60px;
-    color: white;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30px;
-    text-decoration: none;
-}
-
-.menu-mobile {
-    padding-top: 72px;
-    transition: 0.3s;
-}
-
-.js-scroll.ativo {
-    opacity: 1;
-    transition: 0.4s;
-}
-
-.js-scroll {
-    opacity: 0;
-}
-
